--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
     <script>
       const container2 = document.querySelector(".img-container2");
       function resizeContainer(e) {
-        e.preventDefault();
-        console.log(e.srcElement);
-        console.log(e);
-        console.log(e.offsetX);
-        if (e.offsetX < 630 && e.toElement != "div.divider") {
+        if (e.offsetX < 630) {
           let xCoords = e.offsetX;
           container2.style.width = xCoords + "px";
         }
